fix : fix the broken UI of discord users in mobile view

--- a/users/discord/style.css
+++ b/users/discord/style.css
@@ -2,6 +2,17 @@
   --light-gray: #d4d4d478;
 }
 
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 66%);
+  z-index: 999;
+}
+
 .header {
   background-color: var(--blue-color);
   text-align: center;
@@ -15,7 +26,7 @@ main {
   grid-template-areas:
     'tab tab '
     'aside details';
-  height: 100vh;
+  height: 80vh;
 }
 
 .users_section {
@@ -36,6 +47,12 @@ main {
   cursor: pointer;
 }
 
+.active_tab_link {
+  color: var(--blue-color);
+  font-weight: 600;
+  border-bottom: 3px solid var(--blue-color);
+}
+
 .active_tab {
   border: 2px solid gray;
 }
@@ -45,7 +62,7 @@ main {
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-block: 0.5rem;
+  margin-bottom: 10px;
   width: 100%;
   background-color: var(--light-gray);
   cursor: pointer;
@@ -59,18 +76,118 @@ main {
 }
 
 .user_details_section {
-  grid-area: details;
-  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 3rem;
   margin: 0 1rem;
   background-color: var(--light-gray);
+}
+
+.user_details_container {
+  width: 60%;
+  overflow-wrap: break-word;
+}
+
+.profile_pic_container {
+  height: 35%;
+  flex: 0 0 25%;
+  text-align: center;
+}
+
+.profile_pic_container img {
+  width: 55%;
+  height: auto;
+  border-radius: 50%;
 }
 
 .user_details_field {
   padding: 0.5rem;
 }
+
+.user_details_field a {
+  color: #4d4dff;
+}
+
+.user_info {
+  color: var(--blue-color);
+}
+
 .no_user_found {
   width: 100vw;
   text-align: center;
   font-size: larger;
   padding: 2rem;
+}
+
+/* MEDIA QUERY */
+
+@media only screen and (max-width: 600px) {
+  main {
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .users_section {
+    width: 95%;
+  }
+
+  .user_details_section {
+    display: none;
+    background: white;
+    position: absolute;
+    top: 20rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
+    z-index: 1000;
+    padding: 2rem 0;
+    border-radius: 1rem;
+  }
+
+  .profile_pic_container {
+    display: block;
+  }
+
+  .profile_pic_container img {
+    width: 35%;
+    margin-bottom: 1rem;
+  }
+
+  .user_details_container {
+    margin: auto;
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .user_details_section {
+    width: 90%;
+  }
+
+  .user_details_container {
+    width: 95%;
+  }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  .user_details_section {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 0;
+  }
+
+  .profile_pic_container img {
+    width: 30%;
+  }
+
+  .user_details_container {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
+  .profile_pic_container img {
+    width: 80%;
+  }
 }
